--- a/21-days-habit/src/index.css
+++ b/21-days-habit/src/index.css
@@ -1,5 +1,390 @@
-body {
+@import url('//fonts.googleapis.com/css?family=Noto+Sans');
+
+/* font */
+@media (max-width:360px) {
+	html {
+		font-size:16px;
+	}
+}
+
+@media (min-width:361px) and (max-width:399px) {
+	html {
+		font-size:17px;
+	}
+}
+
+@media (min-width:400px) and (max-width:439px) {
+	html {
+		font-size:18px;
+	}
+}
+
+@media (min-width:440px) and (max-width:479px) {
+	html {
+		font-size:19px;
+	}
+}
+
+@media (min-width:480px) and (max-width:519px) {
+	html {
+		font-size:20px;
+	}
+}
+
+@media (min-width:520px) and (max-width:559px) {
+	html {
+		font-size:21px;
+	}
+}
+
+@media (min-width:560px) and (max-width:599px) {
+	html {
+		font-size:22px;
+	}
+}
+
+@media (min-width:600px) and (max-width:639px) {
+	html {
+		font-size:23px;
+	}
+}
+
+@media (min-width:640px) and (max-width:679px) {
+	html {
+		font-size:24px;
+	}
+}
+
+@media (min-width:680px) and (max-width:719px) {
+	html {
+		font-size:25px;
+	}
+}
+
+@media (min-width:720px) and (max-width:759px) {
+	html {
+		font-size:26px;
+	}
+}
+
+@media (min-width:760px) and (max-width:799px) {
+	html {
+		font-size:27px;
+	}
+}
+
+@media (min-width:800px) and (max-width:839px) {
+	html {
+		font-size:28px;
+	}
+}
+
+@media (min-width:840px) and (max-width:879px) {
+	html {
+		font-size:29px;
+	}
+}
+
+@media (min-width:880px) and (max-width:919px) {
+	html {
+		font-size:30px;
+	}
+}
+
+@media (min-width:920px) and (max-width:959px) {
+	html {
+		font-size:31px;
+	}
+}
+
+@media (min-width:960px) and (max-width:999px) {
+	html {
+		font-size:32px;
+	}
+}
+
+@media (min-width:1000px) and (max-width:1039px) {
+	html {
+		font-size:33px;
+	}
+}
+
+@media (min-width:1040px) and (max-width:1079px) {
+	html {
+		font-size:34px;
+	}
+}
+
+@media (min-width:1080px) and (max-width:1119px) {
+	html {
+		font-size:35px;
+	}
+}
+
+@media (min-width:1120px) and (max-width:1159px) {
+	html {
+		font-size:36px;
+	}
+}
+
+@media (min-width:1160px) and (max-width:1199px) {
+	html {
+		font-size:37px;
+	}
+}
+
+@media (min-width:1200px) and (max-width:1239px) {
+	html {
+		font-size:38px;
+	}
+}
+
+@media (min-width:1240px) {
+	html {
+		font-size:39px;
+	}
+}
+* {
+  box-sizing: border-box;
+  font-family: 'Noto Sans', sans-serif;
+  letter-spacing: -0.03em;
+}
+
+/* common */
+body, p, h1, h2, h3, h4, h5, h6, ul, ol, li, dl, dt, dd, form, fieldset, legend, input, textarea, button, select, img {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
 }
+body, input, textarea, select, button, table {
+  color: rgba(51, 51, 51, 1);
+  letter-spacing: -0.3px;
+  box-shadow: none;
+  border: none;
+}
+button {
+  background: none;
+  border-radius: 2px;
+}
+select:focus, button:focus, textarea:focus {
+  outline: 0;
+}
+table, caption, tbody, tfoot, thead, tr, th, td {
+  margin: 0;
+  padding: 0;
+  outline: 0;
+  border: 0;
+  background: transparent;
+  vertical-align: middle;
+  word-break: break-all;
+  font-size: 100%;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+img, fieldset {
+  border: 0;
+}
+ul {
+  list-style: none;
+}
+address, em {
+  color: rgb(51, 51, 51);
+  font-style: normal;
+}
+a {
+  color: rgb(51, 51, 51);
+  text-decoration: none;
+}
+a:hover, a:active, a:focus {
+  text-decoration: none;
+}
+hr, legend, caption {
+  display: none;
+}
+a, input {
+  outline: none;
+}
+hr {
+  display: block;
+  height: 1px;
+  border: 0;
+  border-top: 1px solid #ccc;
+  margin: 1em 0;
+  padding: 0;
+}
+input, select {
+    vertical-align: middle;
+}
+input::-webkit-input-placeholder{
+	color: rgba(51,51,51,0.3);
+}
+body{
+  padding: 0 25px 80px 25px;
+}
+button:active{
+  opacity: 0.5;
+}
+
+/* login */
+header{
+	overflow: hidden;
+  margin: 44px 0px 30px 0px
+}
+.bt_back{
+  width: 12px;
+  height: 20px;
+  background: #fff url(images/bt_back.png) no-repeat center/100%;
+}
+.tit_style1{
+  margin-bottom: 40px;
+  font-size: 1.875em;
+}
+.input_wrap{
+  margin-bottom: 60px;
+}
+.input_box{
+  margin-bottom: 30px;
+}
+.input_box:last-child{
+  margin-bottom: 0px;
+}
+.input_box label{
+  display: block;
+  margin-bottom: 20px;
+  font-size:1.125em;
+}
+.input_box input{
+  font-size:1.375em;
+}
+.bt_wrap_hor_box{
+  text-align: right;
+}
+.bt_wrap_hor{
+  overflow: hidden;
+  display: inline-block;
+}
+.bt_wrap_hor button{
+  float: left;
+  margin-left: 10px;
+  padding: 8px 20px;
+  font-size: 1em;
+}
+.bt_wrap_hor button:first-child{
+  margin-left: 0px;
+}
+.bt_white{
+  color: #597AC8;
+}
+.bt_blue{
+  color: #fff;
+  background: #597AC8;
+}
+.bt_wrap_ver_box{
+  clear: both;
+  margin-top: 30px;
+  border-top: 1px solid rgba(193, 193, 193, 0.5);
+}
+.bt_wrap_ver_box .title{
+  margin: 13px 0 18px 0;
+  color: rgba(51, 51, 52, 0.3);
+  font-size: 1em;
+}
+.bt_wrap_ver_box button{
+  margin-bottom: 30px;
+  padding-left: 50px;
+  font-size: 1.125em;
+  line-height: 36px;
+}
+.bt_wrap_ver_box button:last-child{
+  margin-bottom: 0px;
+}
+.bt_wrap_ver_box .bt_facebook{
+  background: #fff url(images/bt_facebook.png) no-repeat left center/36px 36px;
+}
+.bt_wrap_ver_box .bt_google{
+  background: #fff url(images/bt_google.png) no-repeat left center/36px 36px;
+}
+.bt_gray{
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  z-index: 10;
+  padding: 16px 0;
+  width: 100%;
+  color: rgba(51, 51, 51, 0.4);
+  font-size: 1em;
+  background: rgb(234,234,234);
+}
+.bt_gray::before{
+  content: "";
+  width: 100%;
+  background: #fff;
+}
+/* //login */
+
+/* category */
+header .bt_back{
+  float: left;
+	margin-top: 2%;
+}
+header span{
+  float: left;
+	margin-left: 16px;
+	font-size: 1.875em;
+}
+.text_box{
+	padding: 0 29px;
+}
+.text_box p:nth-of-type(1){
+	margin-bottom: 70px;
+	font-size: 1.3125em;
+	line-height: 1.875em;
+}
+.text_box p:nth-of-type(2){
+	color: rgba(51, 51, 51, 0.4);
+	font-size: 1.25em;
+	line-height: 1.75em;
+}
+.text_box p:nth-of-type(3){
+	color: rgba(51, 51, 51, 0.4);
+	font-size: 1em;
+	line-height: 1.75em;
+}
+.box{
+	margin-bottom: 30px;
+	padding: 30px 20px;
+	background: #FFFFFF;
+	box-shadow: 0 0 4px 0 rgba(0,0,0,0.20);
+	border-radius: 2px;
+}
+.box:last-child{
+	margin-bottom: 0px;
+}
+.box .title{
+	margin-bottom: 24px;
+	font-size: 1.5em;
+	font-weight: bold;
+}
+.check_list{
+	overflow: hidden;
+	margin-bottom: 24px;
+}
+.check_list:last-child{
+	margin-bottom: 0px;
+}
+.check_list input[type="checkbox"]{
+	display: none;
+}
+.check_list label{
+	padding-top: 3px;
+	padding-left: 30px;
+	font-size: 1.375em;
+	background: #fff url(images/bt_check_off.png) no-repeat left center/20px 20px;
+}
+.check_list input[type="checkbox"]:checked~label{
+	color: rgba(51,51,51,0.3);
+	text-decoration: line-through rgba(51,51,51,0.3);
+	background: #fff url(images/bt_check_on.png) no-repeat left center/20px 20px;
+}
+/* //category */
