--- a/Publishing/index.css
+++ b/Publishing/index.css
@@ -1,15 +1,9 @@
 @import url('//fonts.googleapis.com/css?family=Noto+Sans');
 
 /* font */
-@media (max-width:360px) {
+@media (max-width:399px) {
 	html {
 		font-size:16px;
-	}
-}
-
-@media (min-width:361px) and (max-width:399px) {
-	html {
-		font-size:17px;
 	}
 }
 
@@ -214,14 +208,16 @@ hr {
   padding: 0;
 }
 input, select {
-    vertical-align: middle;
-		background: none;
+  vertical-align: middle;
+	background: none;
+	border-radius: 0px;
 }
 input::-webkit-input-placeholder, textarea::-webkit-input-placeholder{
 	color: rgba(51,51,51,0.3);
 }
 body{
-  padding: 0 25px 80px 25px;
+  /* padding: 0 25px 80px 25px; */
+	padding-bottom: 80px;
 }
 button:active, a:active{
   opacity: 0.5;
@@ -231,6 +227,7 @@ button:active, a:active{
 header{
 	overflow: hidden;
   margin: 30px 0px;
+	padding: 0 25px;
 }
 .bt_back{
   width: 12px;
@@ -239,10 +236,12 @@ header{
 }
 .tit_style1{
   margin-bottom: 40px;
+	padding: 0 25px;
   font-size: 1.875em;
 }
 .input_wrap{
   margin-bottom: 60px;
+	padding: 0 25px;
 }
 .input_box{
   margin-bottom: 30px;
@@ -258,15 +257,13 @@ header{
 .input_box input{
   font-size:1.375em;
 }
-.bt_wrap_hor_box{
-  text-align: right;
-}
 .bt_wrap_hor{
   overflow: hidden;
-  display: inline-block;
+  display: flex;
+	justify-content: flex-end;
+	padding: 0 25px;
 }
 .bt_wrap_hor button{
-  float: left;
   margin-left: 10px;
   padding: 8px 20px;
   font-size: 1em;
@@ -282,8 +279,8 @@ header{
   background: #597AC8;
 }
 .bt_wrap_ver_box{
-  clear: both;
   margin-top: 30px;
+	padding: 0 25px;
   border-top: 1px solid rgba(193, 193, 193, 0.5);
 }
 .bt_wrap_ver_box .title{
@@ -327,7 +324,7 @@ header{
 /* header */
 header .bt_back{
   float: left;
-	margin-top: 4%;
+	margin-top: 3%;
 	margin-right: 16px;
 }
 header span{
@@ -357,6 +354,7 @@ header div a img{
 	position: relative;
 	display: flex;
 	margin-bottom: 32px;
+	padding: 0 25px;
 	width: 100%;
 	justify-content: space-between;
 }
@@ -394,7 +392,7 @@ nav label span:last-child{
 	display: none;
 	position: absolute;
 	top:40px;
-	right: 0px;
+	right: 25px;
 	z-index: 10;
 	padding: 16px 20px;
 	background: rgb(255,255,255);
@@ -407,6 +405,9 @@ nav label span:last-child{
 }
 .select .list_view_type button:last-child{
 	margin-top: 26px;
+}
+.list_view_box{
+	padding: 0 25px;
 }
 .check_list_wrap{
 	display: flex;
@@ -458,6 +459,9 @@ nav label span:last-child{
 	color: rgba(51, 51, 51, 0.4);
 	font-size: 1em;
 	line-height: 1.75em;
+}
+.box_wrap{
+	padding: 0 25px;
 }
 .box{
 	margin-bottom: 30px;
@@ -517,12 +521,14 @@ nav label span:last-child{
 
 /* all_list */
 textarea{
+	padding: 0 25px;
 	width: 100%;
 	font-size: 1.375em;
 }
 .input_wrap2{
 	display: flex;
-	justify-content:space-between;
+	padding: 0 25px;
+	justify-content: space-between;
 }
 .input_box2 label{
 	display: inline-block;
@@ -535,13 +541,21 @@ textarea{
 	font-size: 1.375em;
 	border-bottom: 1px solid rgba(51,51,51,0.3);
 }
-.input_wrap2 .input_box2:first-child{
+/* .input_wrap2 .input_box2:first-child{
 	margin-right: 10px;
 	padding-right: 30px;
 	background: url(images/ico_arrow.png) no-repeat bottom 20px right /20px 15px;
+} */
+.ico_arrow{
+	padding: 20px;
+	background: url(images/ico_arrow.png) no-repeat center bottom 20px/20px 15px;
 }
 .input_wrap3{
 	margin-top: 84px;
+	padding: 0 25px;
+}
+.input_wrap3 .input_wrap2{
+	padding: 0px;
 }
 .input_wrap3 .title{
 	margin-bottom: 20px;
@@ -569,3 +583,167 @@ textarea{
 	font-size: 1.25em;
 }
 /* //all_list */
+
+/* datail_habit */
+.box_shadow{
+	margin-bottom: 52px;
+	box-shadow: 0 2px 4px 0 rgba(0,0,0,0.15);
+}
+.progress_wrap{
+	overflow: hidden;
+	padding: 0 25px;
+}
+.progress_wrap .title_wrap{
+	display: flex;
+	margin-bottom: 10px;
+	justify-content: space-between;
+}
+.progress_wrap .title_wrap div:last-child{
+	color: rgba(51,51,51,0.3);
+}
+.progress{
+	display: inline-block;
+	margin-bottom: 70px;
+	width: 100%;
+}
+progress {
+	position: relative;
+  display: block;
+  width: 100%;
+  border: 0 none;
+  background: rgba(51,51,51,0.1);
+  border-radius: 50px;
+}
+/* webkit */
+@media screen and (-webkit-min-device-pixel-ratio:0) {
+  progress {
+    height: 14px;
+  }
+}
+progress::-webkit-progress-bar {
+  background: transparent;
+}
+progress::-webkit-progress-value {
+	padding-right: 150px;
+  border-radius: 50px;
+  background: #597AC8;
+}
+.progress .progress_value_wrap{
+	position: relative;
+	top: 0px;
+}
+.progress .progress_value_wrap .progress_value{
+	position: absolute;
+	padding: 80px 10px 10px 10px;
+	top: -64px;
+	right: -20px;
+	background: url(images/ico_circle.png) no-repeat center/100%;
+	color: #597AC8;
+	font-size: 0.875em;
+}
+.history_wrap{
+	overflow-x: scroll;
+	padding: 0 25px;
+	margin-bottom: 20px;
+	width: 100%;
+	-webkit-overflow-scrolling: touch;
+}
+.history_wrap div{
+	display: flex;
+	width: 1282px;
+	background: url(images/bg_line.png) repeat-x center/100% 2px;
+	justify-content: space-between;
+}
+.history_wrap input{
+	display: none;
+}
+.history_wrap label{
+	display: inline-block;
+	width: 42px;
+	height: 42px;
+	text-align: center;
+	border-radius: 50%;
+	background: #fff;
+	border: 2px solid #597AC8;
+	color: #597AC8;
+	line-height: 38px;
+}
+.history_wrap label:last-child{
+	margin-right: 0px;
+}
+.history_wrap input:nth-of-type(1):checked~label:nth-of-type(1),
+.history_wrap input:nth-of-type(2):checked~label:nth-of-type(2),
+.history_wrap input:nth-of-type(3):checked~label:nth-of-type(3),
+.history_wrap input:nth-of-type(4):checked~label:nth-of-type(4),
+.history_wrap input:nth-of-type(5):checked~label:nth-of-type(5),
+.history_wrap input:nth-of-type(6):checked~label:nth-of-type(6),
+.history_wrap input:nth-of-type(7):checked~label:nth-of-type(7),
+.history_wrap input:nth-of-type(8):checked~label:nth-of-type(8),
+.history_wrap input:nth-of-type(9):checked~label:nth-of-type(9),
+.history_wrap input:nth-of-type(10):checked~label:nth-of-type(10),
+.history_wrap input:nth-of-type(11):checked~label:nth-of-type(11),
+.history_wrap input:nth-of-type(12):checked~label:nth-of-type(12),
+.history_wrap input:nth-of-type(13):checked~label:nth-of-type(13),
+.history_wrap input:nth-of-type(14):checked~label:nth-of-type(14),
+.history_wrap input:nth-of-type(15):checked~label:nth-of-type(15),
+.history_wrap input:nth-of-type(16):checked~label:nth-of-type(16),
+.history_wrap input:nth-of-type(17):checked~label:nth-of-type(17),
+.history_wrap input:nth-of-type(18):checked~label:nth-of-type(18),
+.history_wrap input:nth-of-type(19):checked~label:nth-of-type(19),
+.history_wrap input:nth-of-type(20):checked~label:nth-of-type(20),
+.history_wrap input:nth-of-type(21):checked~label:nth-of-type(21){
+	background: #597AC8;
+	color: #fff;
+}
+.bt_wrap{
+	display: flex;
+	padding: 14px 25px;
+	justify-content: space-around;
+}
+.bt_wrap button{
+	font-size: 1.125em;
+}
+.bt_wrap .ico_bar{
+	width: 2px;
+	height: 26px;
+	background: url(images/ico_bar.png) no-repeat center/2px 26px;
+}
+.bg_blue{
+	margin-top: 20px;
+	margin-bottom: -80px;
+	padding: 25px;
+	background: rgba(89,122,200,0.06)
+}
+.bg_blue .title_wrap{
+	display: flex;
+	margin-bottom: 20px;
+	font-size: 1.125em;
+	justify-content: space-between;
+}
+.bg_blue .title_wrap .bt_add_memo{
+	width: 20px;
+	height: 20px;
+	background: url(images/bt_add_memo.png) no-repeat center/100%;
+}
+.bg_blue .box{
+	margin-bottom: 20px;
+	padding: 20px;
+}
+.bg_blue .box .title_wrap{
+	font-size: 1em;
+}
+.bg_blue .box .title{
+	margin-bottom: 0px;
+	color: rgba(51,51,51,0.5);
+	font-size: 1em;
+	font-weight: normal;
+}
+.bg_blue .box .bt_delete{
+	width: 16px;
+	height: 16px;
+	background: url(images/bt_delete.png) no-repeat center/100%;
+}
+.bg_blue .box .content{
+	line-height: 1.75em;
+}
+/* //datail_habit */
