--- a/Publishing/index.css
+++ b/Publishing/index.css
@@ -260,14 +260,13 @@ header{
 .error{
 	margin-bottom: 20px;
 	padding: 0 25px;
-	display: flex;
 	text-align: right;
-	justify-content: flex-end;
-	background: url(images/ico_emoji.png) no-repeat right 200px center/51px 58px;
+	background: url(images/ico_emoji.png) no-repeat right 52% center/51px 58px;
 }
 .error div:nth-of-type(1){
 	margin-bottom: 4px;
 	font-size: 1.125em;
+	font-weight: bold;
 }
 .error div:nth-of-type(2){
 	color: rgba(51,51,51,0.5);
